--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h1>Tate</h1>
     <h2>@T8</h2>
     <p><em>Freelance maker and dabbler. Love building things. Currently working on this <a href="https://mock.getmimo.com">neat little project</a>.</em></p>
+    <p><strong>Where:</strong>London</p>
+    <p><strong>Webpage:</strong><a href="https://mock.getmimo.com">lucienthegreat.com</a></p>
   </body>
 </html>
