feat: adding a fake button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <a href="https://mock.getmimo.com">Home</a>
     <a href="https://mock.getmimo.com">DMs</a>
     <a href="https://mock.getmimo.com">Logout</a>
+    <a href="https://mock.getmimo.com">Fake Button</a>
     <br>
     <img src="https://mimo.app/i/sparkles.png">
     <h1>Tate</h1>
